--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Watch-ex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
